src/test/deca/context/invalid/created/binary_exp/op_arith/div_A_float.deca
// Description :
//    test div entre un A et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) L’opérande gauche est de type A, L’opérande droite est de type float. Or les types des opérandes doivent être ‘int’ ou ‘float’ pour l’opérateur /
class A{}
{
A a;
float b;
int c = a / b;
}
